<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="#20B2AA">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:layout_margin="16dp"
        android:scaleType="centerInside"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/header_gasolina"
            android:textColor="@color/color_text_default"
            android:textAlignment="center"
            android:layout_weight="1"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/header_alcool"
            android:textColor="@color/color_text_default"
            android:textAlignment="center"
            android:layout_weight="1"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/gasolina_input_price"
            android:layout_margin="16dp"
            android:layout_width="82dp"
            android:layout_height="wrap_content"
            android:hint="@string/gasolina_edit_text"
            android:background="@color/edit_text_background"
            android:textAlignment="center"
            android:layout_weight="1"/>

        <EditText
            android:id="@+id/alcool_input_price"
            android:layout_margin="16dp"
            android:layout_width="82dp"
            android:layout_height="wrap_content"
            android:hint="@string/alcool_edit_text"
            android:background="@color/edit_text_background"
            android:textAlignment="center"
            android:layout_weight="1"/>
    </LinearLayout>

    <Button
        android:id="@+id/calculate_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/calcular"/>
    <TextView
        android:layout_marginTop="16dp"
        android:id="@+id/more_rentable_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="@color/color_text_default"
        android:textSize="@dimen/more_rentable_text"
        />
</LinearLayout>